Move folder and files

--- a/notebooks/collect_data/[wlp]_1_get_wamis_openapi_water_level.ipynb
+++ b/notebooks/collect_data/[wlp]_1_get_wamis_openapi_water_level.ipynb
@@ -6,7 +6,8 @@
       "name": "[wlp] 1. get wamis openapi water level.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsj0gtJPaFJWjcJ1tvLo8w"
+      "authorship_tag": "ABX9TyPsj0gtJPaFJWjcJ1tvLo8w",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hyunholee26/Short-term-water-level-prediction-in-the-river-using-LSTM-with-MC-dropout/blob/main/collect_data/%5Bwlp%5D_1_get_wamis_openapi_water_level.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
